--- a/firstNode/views/404.html
+++ b/firstNode/views/404.html
@@ -3,8 +3,10 @@
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="../static/css/common.css"/>
+		
 	</head>
 	<body>
-		this is a login.html
+		this is a 404.html
 	</body>
 </html>
