--- a/firstNode/views/index.html
+++ b/firstNode/views/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="../static/css/common.css"/>
 	</head>
 	<body>
 		this is a index.html
