--- a/firstNode/views/register.html
+++ b/firstNode/views/register.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="UTF-8">
 		<title></title>
+		<link rel="stylesheet" type="text/css" href="../static/css/common.css" />
 	</head>
+
 	<body>
 		this is a reister.html
 	</body>
+
 </html>
